--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.metinform</groupId>
     <artifactId>delayqueue-redisson-boot-starter</artifactId>
     <version>1.0.0</version>
 
@@ -19,6 +19,7 @@
         <springboot.version>2.1.8.RELEASE</springboot.version>
         <minio.version>6.0.11</minio.version>
         <lombok.version>1.18.10</lombok.version>
+        <redisson.boot.version>3.12.3</redisson.boot.version>
     </properties>
 
     <dependencies>
@@ -41,7 +42,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>3.12.3</version>
+            <version>${redisson.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
